<resources>
    <string name="app_name">Submission 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete Item</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="item_name">Title</string>
    <string name="item_release">Date</string>
    <string name="item_description">Overview</string>
    <string name="detail_name">Title</string>
    <string name="detail_date">Date</string>
    <string name="detail_overview">Overview</string>
    <string name="title_detail">Detail</string>
</resources>
