<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="8dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:id="@+id/roundKorner"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:corner_radius="8dp">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@color/colorPrimary" />

        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/item_name"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toEndOf="@+id/roundKorner" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_release"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_below="@id/tv_name"
            android:layout_toEndOf="@id/roundKorner" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="4dp"
            android:text="@string/item_description"
            android:ellipsize="end"
            android:maxLines="3"
            android:layout_toEndOf="@+id/roundKorner"
            android:layout_below="@+id/tv_date" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>